themes/hugo-creative-theme/static/css/creative.css
/* ... */
@media(max-width: 500px) {
    .cover-img {
        padding:0 50px;
    }

    .speaker {
      display: block;
      margin: 0 auto;
      -ms-flex-wrap: wrap;
          flex-wrap: wrap;
    }

    .speaker-img {
      width: 170px;
      height: 170px;
      margin: 0 auto 20px auto;
    }

    .speaker-content {
      max-width: 100%;
      text-align: justify;
      margin-bottom: 50px;
      -ms-flex: 0 0 start;
          flex: 0 0 start;
    }

    .speaker-name a {
      text-align: center;
      display: block;
    }
}

.cover-img {
    width: 100%;
    display: block;
    margin: 50px auto;
}

.cover-img .img-responsive{
    margin: 0 auto;
}

.cover-title {
    margin-top: -10px;
}

.cover-subtitle {
}

header {
    position: relative;
    width: 100%;
    min-height: auto;
    text-align: center;
    color: #e84661;
    background-color: white;
}

header .header-content {
    position: relative;
    width: 100%;
    padding: 80px 15px;
    text-align: center;
    margin-top: 30px;
}

header .header-content .header-content-inner h1 {
    margin-top: 0;
    margin-bottom: 0;
    text-transform: uppercase;
    font-weight: 700;
}

header .header-content .header-content-inner hr {
    margin: 30px auto;
}

header .header-content .header-content-inner p {
    margin-bottom: 50px;
    font-size: 16px;
    font-weight: 300;
    color: rgba(255,255,255,.7);
}

@media(min-width:768px) {
    header {
        min-height: 100%;
    }

    header .header-content {
/*        position: absolute;
        top: 50%;
        padding: 0 50px;
        -webkit-transform: translateY(-50%);
        -ms-transform: translateY(-50%);
        transform: translateY(-50%);*/
    }

    header .header-content .header-content-inner {
        margin-right: auto;
        margin-left: auto;
        max-width: 1000px;
    }

    header .header-content .header-content-inner p {
        margin-right: auto;
        margin-left: auto;
        max-width: 80%;
        font-size: 18px;
    }
}

.section-heading {
    margin-top: 0;
}

.service-box {
    margin: 50px auto 0;
    max-width: 400px;
}

.profile-img {
  width: 200px;
  height: 200px;
  border-radius: 50%;
  margin: 0 auto;
  /**border: 4px solid #000;**/
  border: 8px solid #DBDBDB;
  background-color: black;
  background-image: url(../img/anon_gopher.png);
  opacity: 50%;
  background-repeat: no-repeat;
  background-size: 70%;
  background-position: bottom;
}

@media(min-width:992px) {
    .service-box {
        margin: 20px auto 0;
    }
}

.service-box p {
    margin-bottom: 0;
}

.portfolio-box {
    display: block;
    position: relative;
    margin: 0 auto;
    max-width: 650px;
}

.portfolio-box .portfolio-box-caption {
    display: block;
    position: absolute;
    bottom: 0;
    width: 100%;
    height: 100%;
    text-align: center;
    color: #fff;
    opacity: 0;
    background: rgba(240,95,64,.9);
    -webkit-transition: all .35s;
    -moz-transition: all .35s;
    transition: all .35s;
}

.portfolio-box .portfolio-box-caption .portfolio-box-caption-content {
    position: absolute;
    top: 50%;
    width: 100%;
    text-align: center;
    transform: translateY(-50%);
}

.portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category,
.portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
    padding: 0 15px;
    font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;
}

.portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category {
    text-transform: uppercase;
    font-size: 14px;
    font-weight: 600;
}

.portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
    font-size: 18px;
}

.portfolio-box:hover .portfolio-box-caption {
    opacity: 1;
}

@media(min-width:768px) {
    .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category {
        font-size: 16px;
    }

    .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
        font-size: 22px;
    }
}

.call-to-action h2 {
    margin: 0 auto 20px;
}

.text-primary {
    color: #6D9BF1;
}

.no-gutter > [class*=col-] {
    padding-right: 0;
    padding-left: 0;
}

.btn-default {
    border-color: #fff;
    color: #222;
    background-color: #fff;
    -webkit-transition: all .35s;
    -moz-transition: all .35s;
    transition: all .35s;
}

.btn-default:hover,
.btn-default:focus,
.btn-default.focus,
.btn-default:active,
.btn-default.active,
.open > .dropdown-toggle.btn-default {
    border-color: none;
    color: #222;
    background-color: #efefef;
}

ul .dropdown-menu {
  border: none;
  background-color: #efefef;
}

ul .dropdown-menu li a {
  color: #e84661;
}

ul .dropdown-menu li a:hover {
  color: white;
  background-color: #e84661;
}

.btn-default:active,
.btn-default.active,

.open > .dropdown-toggle.btn-default {
    background-image: none;
}

.btn-default.disabled,
.btn-default[disabled],
fieldset[disabled] .btn-default,
.btn-default.disabled:hover,
.btn-default[disabled]:hover,
fieldset[disabled] .btn-default:hover,
.btn-default.disabled:focus,
.btn-default[disabled]:focus,
fieldset[disabled] .btn-default:focus,
.btn-default.disabled.focus,
.btn-default[disabled].focus,
fieldset[disabled] .btn-default.focus,
.btn-default.disabled:active,
.btn-default[disabled]:active,
fieldset[disabled] .btn-default:active,
.btn-default.disabled.active,
.btn-default[disabled].active,
fieldset[disabled] .btn-default.active {
    border-color: #fff;
    background-color: #fff;
}

.btn-default .badge {
    color: #fff;
    background-color: #222;
}

.btn-primary {
    border-color: #36bfbe;
    color: #fff;
    background-color: #36bfbe;
    -webkit-transition: all .35s;
    -moz-transition: all .35s;
    transition: all .35s;
}

.register-btn {
    margin-bottom: 12px;
    margin-top: 10px;
}

.tickets-btn {
    background-color: transparent;
    margin-right: 15px;
}
/* ... */

